--- a/src/data/grammar/images/mtg-comic.yaml
+++ b/src/data/grammar/images/mtg-comic.yaml
@@ -274,7 +274,7 @@ svgComicTemplate3Content5aText:
 - "We're lost, aren't we?"
 - "Am I being detained?"
 - "I have a confession to make."
-- "I'm made up my mind."
+- "I've made up my mind."
 - "Why are you always [_doing:#verbIntransitiveGerund#,so #adj#]#_doing#?"
 - "Did you plan this?"
 - "Is it really your birthday?"
